<resources>
    <string name="players">Игроки:</string>
    <string name="add">Добавить</string>
    <string name="edit">Изменить</string>
    <string name="cansel">Отменить</string>
    <string name="ok">OK</string>
    <string name="next">Далее</string>
    <string name="name">Имя</string>
    <string name="topic_number">Количество категорий:</string>
    <string name="card_number">Количество слов:</string>
    <string name="card_number_disc">в одной категории</string>
    <string name="time">Время:</string>
    <string name="time_disc">продолжительность в секундах</string>
    <string name="chosen_topics">Выбрано %1$d из %2$d категорий:</string>
    <string name="start">Начать</string>
    <string name="stop">Стоп</string>
    <string name="guessed">Отгадали</string>
    <string name="x">X</string>
    <string name="player_one">Игрок 1</string>
    <string name="player_two">Игрок 2</string>
    <string name="error_input_name">Имя не может быть пустым</string>
    <string name="back_pressed_title">Выход</string>
    <string name="back_pressed_message">Вы хотите выйти? Весь прогресс будет сброшен</string>
    <string name="winners">Победители</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="score">Счет</string>
    <string name="results">Результаты</string>
</resources>