<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.game.cardActivity.CardActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_guideline_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_guideline_85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline_40"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_85"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_15"
        app:layout_constraintTop_toTopOf="@+id/h_guideline_20">

        <TextView
            android:id="@+id/tv_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Строитель"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-66dp" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_timer_time"
        style="@style/TimerTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60"
        app:layout_constraintBottom_toTopOf="@+id/h_guideline_50"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_85"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_15"
        app:layout_constraintTop_toTopOf="@+id/h_guideline_50" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_timers_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_guessed"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_85"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_15"
        app:layout_constraintTop_toBottomOf="@id/tv_timer_time">

        <Button
            android:id="@+id/btn_stop_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_start_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_start_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_stop_timer"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_guessed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/guessed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/v_guideline_85"
        app:layout_constraintStart_toStartOf="@+id/v_guideline_15"
        app:layout_constraintTop_toTopOf="@id/cl_timers_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>